syntax = "proto3";

package api;
option go_package = "gitlab.ozon.dev/anuramat/homework-1/internal/api";

message Image {
    string FileID = 1;
    string Description = 2;
    int64 Upvotes = 3;
    int64 Downvotes = 4;
}

message Empty{}

message ImageAuthRequest {
    int64 UserID = 1;
    Image Image = 2;
}

message Images {
    //homework
    repeated Image Image = 1;
}

message Page {
    //homework
    int32 offset = 1;
    int32 limit = 2;
}

message GalleryRequest {
    int32 offset = 1;
    int64 UserID = 2;
}

message GalleryImage {
    int32 offset = 1;
    Image Image = 2;
}

service ImgShare {
    
    rpc GetGalleryImage(GalleryRequest) returns (GalleryImage);
    rpc CreateImage(ImageAuthRequest) returns (Empty);
    rpc ReadImage(Image) returns (Image);
    rpc GetRandomImage(Empty) returns (Image);
    rpc SetDescriptionImage(ImageAuthRequest) returns (Image);
    rpc UpvoteImage(ImageAuthRequest) returns (Image);
    rpc DownvoteImage(ImageAuthRequest) returns (Image);
    rpc DeleteImage(ImageAuthRequest) returns (Empty);

    // HW-2 requirement
    rpc GetAllImages(Page) returns (Images);
}
